tests/invalid/05_bad_struct_field.ml
struct Point {
    int32 x;
    int32 y;
}

int main() {
    Point p = Point { x: 10, z: 20 };

    return 0;
}
